--- a/sources/src/index.css
+++ b/sources/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 html{
-  --main-bg-image: url('./assets/DAY.png');
-  --main-part-image: url('./assets/overlay.png'),linear-gradient(180deg, rgba(132,155,59,1) 1%, rgba(250,194,194,1) 100%);
+  --main-bg-image: url('/baton.github.io/assets/DAY.png');
+  --main-part-image: url('/baton.github.io/assets/overlay.png'),linear-gradient(180deg, rgba(132,155,59,1) 1%, rgba(250,194,194,1) 100%);
   --sign-color: #876767;
   --sign-hover-color: #685050;
-  --stars-path: url('./assets/stars.svg')
+  --stars-path: url('/baton.github.io/assets/stars.svg')
 }
 
 #headline {
